[gd_scene load_steps=4 format=2]

[ext_resource path="res://StatDice.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/HUD/Slots.png" type="Texture" id=3]
[ext_resource path="res://Hud.gd" type="Script" id=10]

[node name="Hud" type="Node2D"]
script = ExtResource( 10 )

[node name="StatDice" parent="." instance=ExtResource( 1 )]
position = Vector2( 633, 216 )

[node name="StatDice2" parent="." instance=ExtResource( 1 )]
position = Vector2( 964, 222 )
stat = "speed"

[node name="StatDice3" parent="." instance=ExtResource( 1 )]
position = Vector2( 1279, 217 )
stat = "cooldown"

[node name="Sprite2" type="Sprite" parent="."]
texture = ExtResource( 3 )
centered = false

[connection signal="updated" from="StatDice" to="." method="_on_StatDice_updated"]
[connection signal="updated" from="StatDice2" to="." method="_on_StatDice_updated"]
[connection signal="updated" from="StatDice3" to="." method="_on_StatDice_updated"]
